cluster-examples/cilium-cluster/kube-system/sealer/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sealed-secrets-http
  namespace: kube-system
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - name: kong
    namespace: kong
  hostnames:
  - 'seal.h3m.local'
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sealed-secrets-controller
      kind: Service
      port: 8080
      namespace: kube-system
